--- a/views/demo_index.ejs
+++ b/views/demo_index.ejs
@@ -7,7 +7,7 @@
 
 <body>
 <p>
-This page has been visited <%- visits %> times.
+This page has been visited <%= visits %> times.
 </p>
 <% if (visits == 3) { %>
 <p>You are lucky number 3!</p>
